--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~13.2.2",
     "@awesome-cordova-plugins/core": "^5.41.0",
     "@awesome-cordova-plugins/in-app-browser": "^5.41.0",
+    "@awesome-cordova-plugins/social-sharing": "^5.41.0",
     "@capacitor/android": "3.4.3",
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.4.3",
@@ -28,7 +29,10 @@
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
+    "@ionic/storage": "^3.0.6",
+    "@ionic/storage-angular": "^3.0.6",
     "cordova-plugin-inappbrowser": "^5.0.0",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
